[package]
name = "Deus-Ex-Machina"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking", "wayland"] }
bevy_rapier2d = "*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1
#incremental = false
#debug = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
